# queue-testing

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
data_client/: client.py  data_pb2.py  data_pb2_grpc.py  requirements.txt
proto/: data.proto
terraform/: main.tf
write_data/: Cargo.toml  build.rs
write_data/src/: main.rs  server.rs
